platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-examfinal-ft_strndup/runtime/traces/bundle-audit.exams-examfinal-ft_strndup/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-examfinal-ft_strndup/datasets/exercises/exams/examfinal/ft_strndup/tests/main.c:7:12: error: 'ft_my_strlen' defined but not used [-Werror=unused-function]
    7 | static int ft_my_strlen(char *str)
      |            ^~~~~~~~~~~~
cc1: all warnings being treated as errors
